fix: set z-index so dashboard contaier doesnt cover box-shadow

--- a/src/pages/view/DashboardsBar/styles/DashboardsBar.module.css
+++ b/src/pages/view/DashboardsBar/styles/DashboardsBar.module.css
@@ -13,6 +13,7 @@
     flex-direction: column;
     height: var(--user-rows-height);
     width: 100%;
+    z-index: 1;
 }
 
 .content {
